--- a/UniPro/ClientApp/angular.json
+++ b/UniPro/ClientApp/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Quadra": {
+    "UniPro": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -52,18 +52,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Quadra:build"
+            "browserTarget": "UniPro:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Quadra:build:production"
+              "browserTarget": "UniPro:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Quadra:build"
+            "browserTarget": "UniPro:build"
           }
         },
         "test": {
@@ -122,7 +122,7 @@
         }
       }
     },
-    "Quadra-e2e": {
+    "UniPro-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -130,7 +130,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Quadra:serve"
+            "devServerTarget": "UniPro:serve"
           }
         },
         "lint": {
@@ -145,5 +145,5 @@
       }
     }
   },
-  "defaultProject": "Quadra"
+  "defaultProject": "UniPro"
 }
