--- a/UniPro/ClientApp/package.json
+++ b/UniPro/ClientApp/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:ssr": "ng run Quadra:server:dev",
+    "build:ssr": "ng run UniPro:server:dev",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
