Update all packages

--- a/UniPro/appsettings.json
+++ b/UniPro/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "QuadraContext": "Server=.\\SQLEXPRESS;Database=Quadra;User=sa;Password=123qQ!;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "UniProContext": "Server=localhost;Database=UniPro;User=sa;Password=123qQ!;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
