--- a/UniPro/ClientApp/package.json
+++ b/UniPro/ClientApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quadra",
+  "name": "UniPro",
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
@@ -12,39 +12,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.7",
-    "@angular/common": "7.2.7",
-    "@angular/compiler": "^7.2.7",
-    "@angular/core": "7.2.7",
-    "@angular/forms": "7.2.7",
-    "@angular/http": "7.2.7",
-    "@angular/platform-browser": "7.2.7",
-    "@angular/platform-browser-dynamic": "7.2.7",
-    "@angular/platform-server": "7.2.7",
-    "@angular/router": "7.2.7",
+    "@angular/animations": "8.2.7",
+    "@angular/common": "8.2.7",
+    "@angular/compiler": "^8.2.7",
+    "@angular/core": "8.2.7",
+    "@angular/forms": "8.2.7",
+    "@angular/platform-browser": "8.2.7",
+    "@angular/platform-browser-dynamic": "8.2.7",
+    "@angular/platform-server": "8.2.7",
+    "@angular/router": "8.2.7",
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@nguniversal/aspnetcore-engine": "^7.1.0",
-    "@nguniversal/module-map-ngfactory-loader": "7.1.0",
+    "@nguniversal/module-map-ngfactory-loader": "^7.1.0",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
     "forse": "^1.0.0",
-    "jquery": "3.3.1",
+    "jquery": "^3.4.1",
     "popper.js": "^1.14.7",
-    "rxjs": "^6.4.0",
-    "zone.js": "^0.8.29"
+    "rxjs": "^6.5.3",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.4",
-    "@angular/cli": "^7.3.4",
-    "@angular/compiler-cli": "^7.2.7",
-    "@angular/language-service": "^7.2.7",
+    "@angular-devkit/build-angular": "~0.803.5",
+    "@angular/cli": "^8.3.5",
+    "@angular/compiler-cli": "^8.2.7",
+    "@angular/language-service": "^8.2.7",
     "@types/jasmine": "^3.3.9",
     "@types/jasminewd2": "~2.0.6",
     "@types/node": "^11.10.4",
-    "codelyzer": "^4.5.0",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.0.1",
@@ -52,7 +51,7 @@
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "typescript": "^3.2.4"
+    "typescript": "^3.5.3"
   },
   "optionalDependencies": {
     "node-sass": "^4.9.3",
