--- a/UniPro/ClientApp/package.json
+++ b/UniPro/ClientApp/package.json
@@ -21,11 +21,8 @@
     "@angular/platform-browser-dynamic": "8.2.7",
     "@angular/platform-server": "8.2.7",
     "@angular/router": "8.2.7",
-    "@fortawesome/angular-fontawesome": "^0.3.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.15",
-    "@fortawesome/free-solid-svg-icons": "^5.7.2",
-    "@nguniversal/aspnetcore-engine": "^7.1.0",
-    "@nguniversal/module-map-ngfactory-loader": "^7.1.0",
+    "@nguniversal/aspnetcore-engine": "^8.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "^8.1.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
@@ -51,7 +48,7 @@
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "typescript": "^3.5.3"
+    "typescript": "<3.6.0"
   },
   "optionalDependencies": {
     "node-sass": "^4.9.3",
