--- a/UniPro/ClientApp/package.json
+++ b/UniPro/ClientApp/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser-dynamic": "8.2.7",
     "@angular/platform-server": "8.2.7",
     "@angular/router": "8.2.7",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@nguniversal/aspnetcore-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "^8.1.1",
     "aspnet-prerendering": "^3.0.1",
@@ -48,7 +51,7 @@
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "typescript": "<3.6.0"
+    "typescript": "3.5.3"
   },
   "optionalDependencies": {
     "node-sass": "^4.9.3",
