Auth (not complete)

--- a/UniPro/appsettings.json
+++ b/UniPro/appsettings.json
@@ -1,10 +1,15 @@
 {
+  "AppSettings": {
+    "SecretKey": "superSecretKey@345superSecretKey@345superSecretKey@345"
+  },
   "ConnectionStrings": {
     "UniProContext": "Server=localhost;Database=UniPro;User=sa;Password=123qQ!;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Warning",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
   "AllowedHosts": "*"
