--- a/UniPro/appsettings.Development.json
+++ b/UniPro/appsettings.Development.json
@@ -1,4 +1,11 @@
 {
+  "tokenManagement": {
+    "SecretKey": "superSecretKey@345superSecretKey@345superSecretKey@345",
+    "issuer": "http://localhost:4200",
+    "audience": "ECM",
+    "accessExpiration": 30,
+    "refreshExpiration": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
