--- a/UniPro/ClientApp/package.json
+++ b/UniPro/ClientApp/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@angular/animations": "8.2.7",
     "@angular/common": "8.2.7",
-    "@angular/compiler": "^8.2.7",
+    "@angular/compiler": "^8.2.14",
     "@angular/core": "8.2.7",
     "@angular/forms": "8.2.7",
     "@angular/platform-browser": "8.2.7",
@@ -22,35 +22,35 @@
     "@angular/platform-server": "8.2.7",
     "@angular/router": "8.2.7",
     "@fortawesome/angular-fontawesome": "^0.5.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@nguniversal/aspnetcore-engine": "^8.1.1",
-    "@nguniversal/module-map-ngfactory-loader": "^8.1.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@nguniversal/aspnetcore-engine": "^8.2.6",
+    "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "aspnet-prerendering": "^3.0.1",
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.6.5",
+    "bootstrap": "^4.4.1",
+    "core-js": "^2.6.11",
     "forse": "^1.0.0",
     "jquery": "^3.4.1",
-    "popper.js": "^1.14.7",
-    "rxjs": "^6.5.3",
+    "popper.js": "^1.16.1",
+    "rxjs": "^6.5.4",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.5",
-    "@angular/cli": "^8.3.5",
-    "@angular/compiler-cli": "^8.2.7",
-    "@angular/language-service": "^8.2.7",
-    "@types/jasmine": "^3.3.9",
-    "@types/jasminewd2": "~2.0.6",
-    "@types/node": "^11.10.4",
-    "codelyzer": "^5.0.1",
+    "@angular-devkit/build-angular": "^0.803.25",
+    "@angular/cli": "^8.3.25",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
+    "@types/jasmine": "^3.5.8",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^11.15.7",
+    "codelyzer": "^5.2.1",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.1",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.5",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.5.2",
     "typescript": "3.5.3"
   },
   "optionalDependencies": {
