--- a/UniPro/appsettings.Development.json
+++ b/UniPro/appsettings.Development.json
@@ -1,8 +1,8 @@
 {
   "tokenManagement": {
-    "SecretKey": "superSecretKey@345superSecretKey@345superSecretKey@345",
-    "issuer": "http://localhost:4200",
-    "audience": "ECM",
+    "secretKey": "superSecretKey@345superSecretKey@345superSecretKey@345",
+    "issuer": "UniPro",
+    "audience": "UniPro",
     "accessExpiration": 30,
     "refreshExpiration": 60
   },
